--- a/index_full.html
+++ b/index_full.html
@@ -449,7 +449,7 @@ the_app._get_safe = function(a,b){
 
 document.addEventListener('contextmenu', function(e){e.preventDefault();});
 
-//the_app.set('options.waves_render_mode','flag'); //debug
+the_app.set('options.waves_render_mode','flag'); //debug
 </script>
 
 
