--- a/managed-canvas.html
+++ b/managed-canvas.html
@@ -81,10 +81,12 @@ Polymer({
     },
     _update: function(){
         var old = Polymer.dom(this.root).firstChild;
-        if(old)
+        if(old){
             Polymer.dom(this.root).removeChild(old);
-        if(Utils.canvas_manager && this.canv_id !== "")
+        }
+        if(Utils.canvas_manager && this.canv_id){
             Polymer.dom(this.root).appendChild(Utils.canvas_manager.get_canvas(this.canv_id));
+        }
     }
 });
 
